force-app/main/default/objects/pstar__Case_Management__c/pstar__Case_Management__c.object-meta.xml
<CustomObject>
    <label>Case Management</label>
    <nameField>
        <label>Case Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>