force-app/main/default/objects/pstar__Case_Management__c/fields/pstar__Admission__c.field-meta.xml
<CustomField>
    <fullName>pstar__Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission</label>
    <referenceTo>pstar__Patient_Admission__c</referenceTo>
    <relationshipLabel>Case Managements</relationshipLabel>
    <relationshipName>Case_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>