force-app/main/default/objects/pstar__Case_Management__c/fields/pstar__Case_Management_Type__c.field-meta.xml
<CustomField>
    <fullName>pstar__Case_Management_Type__c</fullName>
    <label>Case Management Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>