force-app/main/default/objects/pstar__Case_Management__c/fields/pstar__County__c.field-meta.xml
<CustomField>
    <fullName>pstar__County__c</fullName>
    <formula>pstar__Admission__r.Credible_County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>