force-app/main/default/objects/pstar__Case_Management__c/fields/pstar__Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>pstar__Date_of_Birth__c</fullName>
    <formula>pstar__Patient__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>