force-app/main/default/objects/pstar__Case_Management__c/fields/pstar__IRP_Date_c__c.field-meta.xml
<CustomField>
    <fullName>pstar__IRP_Date_c__c</fullName>
    <label>IRP Date</label>
    <type>Date</type>
</CustomField>