force-app/main/default/objects/pstar__Case_Management__c/fields/pstar__Patient__c.field-meta.xml
<CustomField>
    <fullName>pstar__Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Managements</relationshipLabel>
    <relationshipName>Case_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>