force-app/main/default/objects/pstar__Case_Management__c/fields/pstar__Peer_Type__c.field-meta.xml
<CustomField>
    <fullName>pstar__Peer_Type__c</fullName>
    <formula>pstar__Admission__r.Credible_Peer_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peer Type</label>
    <type>Text</type>
</CustomField>