force-app/main/default/objects/pstar__Case_Management__c/fields/pstar__Primary_Contact_lookup__c.field-meta.xml
<CustomField>
    <fullName>pstar__Primary_Contact_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Managements (Primary Contact lookup)</relationshipLabel>
    <relationshipName>Case_Managements_Primary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>