force-app/main/default/objects/pstar__Case_Management__c/fields/pstar__Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>pstar__Referral_Source__c</fullName>
    <formula>pstar__Admission__r.pstar__Source__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Source</label>
    <type>Text</type>
</CustomField>